# windowed

./: Cargo.toml  LICENSE  README.md
examples/: gl_window.rs  simple.rs  simple_window.rs
src/: buffer.rs  config.rs  error.rs  event.rs  lib.rs  rwd.rs  window.rs
src/examples/: simple.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
