[package]
name = "windowed"
version = "0.2.1"
edition = "2024"
description = "A minimal cross-platform windowing library for Windows and Linux (X11)"
license = "MIT"
authors = ["Patrick Reese (Retroboi64) <https://github.com/Retroboi64>"]
copyright = "Copyright (c) 2025 Patrick Reese (Retroboi64)"
keywords = ["window", "windowing", "x11", "win32", "cross-platform"]
repository = "https://github.com/Retroboi64/windowed"

[dependencies]
raw-window-handle = "0.6"
gl = "0.14.0"

[target.'cfg(target_os = "linux")'.dependencies]
# TODO: Remove this one when we move all impl to x11
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
x11 = { version = "2", features = ["xlib"] }

# Microsoft's official Windows bindings crate (replaces the unmaintained winapi crate).
# https://github.com/microsoft/windows-rs
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
