[package]
name = "windowed"
version = "0.2.4"
edition = "2024"
description = "A minimal cross-platform windowing library for Windows and Linux (X11)"
license = "MIT"
authors = ["Patrick Reese (Retroboi64) <https://github.com/Retroboi64>"]
copyright = "Copyright (c) 2025 Patrick Reese (Retroboi64)"
keywords = ["window", "windowing", "x11", "win32", "cross-platform"]
repository = "https://github.com/Retroboi64/windowed"

[dependencies]
raw-window-handle = "0.6"
gl = { version = "0.14.0", optional = true }

[features]
default = []
opengl = ["gl"]

[[example]]
name = "gl_window"
path = "examples/gl_window.rs"
required-features = ["gl"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
