[package]
name = "windowed"
version = "0.3.0"
edition = "2024"
description = "A minimal, zero-dependency and cross-platform windowing library for Windows, Linux (X11), and macOS (Cocoa)"
license = "MIT"
authors = ["Patrick Reese (Retroboi64) <https://github.com/Retroboi64>"]
copyright = "Copyright (c) 2025 Patrick Reese (Retroboi64)"
keywords = ["window", "windowing", "x11", "win32", "cocoa", "zero-dependency"]
repository = "https://github.com/Retroboi64/windowed"

[dependencies]
gl = { version = "0.14.0", optional = true }

[features]
default = []
opengl = ["gl"]

[[example]]
name = "simple_window"
path = "examples/simple_window.rs"

[[example]]
name = "gl_window"
path = "examples/gl_window.rs"
required-features = ["gl"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
